[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wrf-preprocessing"
version = '0.0.1'
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Mike Kittridge", email = "mullenkamp1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  # 'h5netcdf==1.6.3',
  'netcdf4',
  'numpy==2.2.6',
  'f90nml==1.4.5',
  # 's3func==0.7.2',
  'pendulum==3.1.0',
  'era5_to_int==0.1.0',
  ]

[dependency-groups]
dev = [
  'PyQt5',
  "spyder-kernels==2.5.2",
  "matplotlib",
  "black",
  "mypy",
  "ruff",
  "pytest",
  "pytest-cov",
]

[project.urls]
Documentation = "https://github.com/unknown/wrf-testing#readme"
Issues = "https://github.com/unknown/wrf-testing/issues"
Source = "https://github.com/unknown/wrf-testing"

[tool.hatch.envs.default]
python = "3.9"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  'spyder-kernels==2.4'
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/wrf_testing tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["wrf_testing"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["wrf_testing", "tests"]
branch = true
parallel = true
omit = [
  "src/wrf_testing/__about__.py",
]

[tool.coverage.paths]
wrf_testing = ["src/wrf_testing", "*/wrf-testing/src/wrf_testing"]
tests = ["tests", "*/wrf-testing/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]
